[package]
authors = ["Kévin COMBRIAT <kevin@sc0ville.com>"]
edition = "2018"
name = "blog"
version = "0.1.0"

[dependencies]
actix-web = "3"
diesel = {version = "1.4.4", features = ["postgres", "r2d2"]}
dotenv = "0.15.0"
itconfig = {version = "1.0", features = ["macro"]}
juniper = "0.15.3"
juniper_actix = "0.2.3"
